docs/_site/results/run1/hpctoolkit/logs/hpctoolkit-2019.12.28-papi-experiment.err
==> Warning: Missing a source id for papi@master
==> Error: ProcessError: Command exited with status 2:
    'make' '-j2' 'V=1'

5 errors found in build log:
     375    make[1]: Entering directory `/tmp/sochat1/spack-stage/spack-stage-p
            api-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spack-src/src/libpfm4'
     376    make -C lib
     377    make[2]: Entering directory `/tmp/sochat1/spack-stage/spack-stage-p
            api-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spack-src/src/libpfm4/li
            b'
     378    /p/vast1/build/spack/lib/spack/env/gcc/gcc  -Wno-override-init  -g 
            -Wall -Werror -Wextra -Wno-unused-parameter -I. -I/tmp/sochat1/spac
            k-stage/spack-stage-papi-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spa
            ck-src/src/libpfm4/lib/../include -DCONFIG_PFMLIB_DEBUG -DCONFIG_PF
            MLIB_OS_LINUX -D_REENTRANT -I. -DCONFIG_PFMLIB_ARCH_X86 -DCONFIG_PF
            MLIB_ARCH_X86_64 -I. -c pfmlib_perf_event_pmu.c
     379    /p/vast1/build/spack/lib/spack/env/gcc/gcc  -Wno-override-init  -g 
            -Wall -Werror -Wextra -Wno-unused-parameter -I. -I/tmp/sochat1/spac
            k-stage/spack-stage-papi-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spa
            ck-src/src/libpfm4/lib/../include -DCONFIG_PFMLIB_DEBUG -DCONFIG_PF
            MLIB_OS_LINUX -D_REENTRANT -I. -DCONFIG_PFMLIB_ARCH_X86 -DCONFIG_PF
            MLIB_ARCH_X86_64 -I. -c pfmlib_intel_core.c
     380    pfmlib_perf_event_pmu.c: In function 'gen_tracepoint_table':
  >> 381    pfmlib_perf_event_pmu.c:349:36: error: '%s' directive output may be
             truncated writing up to 255 bytes into a region of size between 0 
            and 4095 [-Werror=format-truncation=]
     382      349 |   snprintf(d2path, MAXPATHLEN, "%s/%s", debugfs_mnt, d1->d_
            name);
     383          |                                    ^~
     384    pfmlib_perf_event_pmu.c:349:3: note: 'snprintf' output between 2 an
            d 4352 bytes into a destination of size 4096
     385      349 |   snprintf(d2path, MAXPATHLEN, "%s/%s", debugfs_mnt, d1->d_
            name);
     386          |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~
  >> 387    pfmlib_perf_event_pmu.c:399:58: error: '%s' directive output may be
             truncated writing up to 255 bytes into a region of size between 0 
            and 4095 [-Werror=format-truncation=]
     388      399 |                         snprintf(idpath, MAXPATHLEN, "%s/%s
            /id", d2path, d2->d_name);
     389          |                                                          ^~
     390    pfmlib_perf_event_pmu.c:399:25: note: 'snprintf' output between 5 a
            nd 4355 bytes into a destination of size 4096
     391      399 |                         snprintf(idpath, MAXPATHLEN, "%s/%s
            /id", d2path, d2->d_name);
     392          |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            ~~~~~~~~~~~~~~~~~~~~~~~~~
     393    /p/vast1/build/spack/lib/spack/env/gcc/gcc  -Wno-override-init  -g 
            -Wall -Werror -Wextra -Wno-unused-parameter -I. -I/tmp/sochat1/spac
            k-stage/spack-stage-papi-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spa
            ck-src/src/libpfm4/lib/../include -DCONFIG_PFMLIB_DEBUG -DCONFIG_PF
            MLIB_OS_LINUX -D_REENTRANT -I. -DCONFIG_PFMLIB_ARCH_X86 -DCONFIG_PF
            MLIB_ARCH_X86_64 -I. -c pfmlib_intel_x86.c
     394    cc1: all warnings being treated as errors
  >> 395    make[2]: *** [pfmlib_perf_event_pmu.o] Error 1
     396    make[2]: *** Waiting for unfinished jobs....
     397    make[2]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-pa
            pi-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spack-src/src/libpfm4/lib
            '
  >> 398    make[1]: *** [lib] Error 2
     399    make[1]: Leaving directory `/tmp/sochat1/spack-stage/spack-stage-pa
            pi-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spack-src/src/libpfm4'
  >> 400    make: *** [/tmp/sochat1/spack-stage/spack-stage-papi-5.3.0-g6wjbfjn
            a3i6imkfhcl64shnm53v6mtk/spack-src/src/libpfm4/lib/libpfm.a] Error 
            2

See build log for details:
  /var/tmp/sochat1/spack-stage/spack-stage-papi-5.3.0-g6wjbfjna3i6imkfhcl64shnm53v6mtk/spack-build-out.txt

Making predictions for symbolator
Making predictions for libabigail
Making predictions for actual
/var/spool/slurmd/job100453/slurm_script: line 12: 12380 Killed                  spliced splice --package hpctoolkit@2019.12.28 --splice papi --runner spack --replace papi --experiment experiment --outfile /p/vast1/build/spliced-experiment/results/hpctoolkit/2019.12.28/papi/experiment.json
Making predictions for spack-test
Making predictions for symbolator
Making predictions for libabigail
abicompat not found on path, will look for spack instead.
Making predictions for actual
